# book-api

./: .env  Cargo.toml  README.md
public/: 404.html  index.html
src/: database.rs  main.rs  models.rs  routes.rs
