[package]
name = "book-api"
version = "0.1.0"
authors = ["Vignesh Ashokan <vigneshgashokan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres"] }
# diesel_codegen = { version = "0.16.0", features = ["postgres"] }
dotenv = "0.9.0"